# harp-updater-gui

./: .gitignore  CSS_GUIDE.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  harp_updater_gui.spec  mkdocs.yml  pyproject.toml  run.py
.github/workflows/: ci-release.yml
docs/: faq.md  index.md  issue-reporting.md  requirements.txt  setup.md  tutorials.md
docs/source/: conf.py  faq.md  index.rst  issue-reporting.md  setup.md
docs/source/_static/: custom.css
src/harp_regulator_gui/: main.py
src/harp_regulator_gui/components/: device_list.py  firmware_browser.py  update_workflow.py
src/harp_regulator_gui/static/: styles.css
src/harp_updater_gui/: main.py
src/harp_updater_gui/components/: device_table.py  update_workflow.py
src/harp_updater_gui/models/: device.py
src/harp_updater_gui/services/: cli_wrapper.py  firmware_service.py
src/harp_updater_gui/static/: styles.css
tests/: test_firmware_service.py
