[project]
name = "harp-updater-gui"
version = "0.1.0"
description = "A GUI for managing Harp devices and updating firmware."
authors = [
    {name = "Anjal Doshi", email = "anjal.doshi@alleninstitute.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "nicegui>=2.5.0",
    "pydantic>=2.0.0",
    "pywebview>=6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.1",
    "sphinx>9.0.0",
    "furo>=2025.7.19",
    "myst-parser>=5.0.0",
    "sphinx-jinja>=2.0.2",
    "pyinstaller>=6.19.0",
    "pillow>=11.3.0",
]

[project.scripts]
harp-updater-gui = "harp_updater_gui.main:start_app"

[project.urls]
Homepage = "https://github.com/AllenNeuralDynamics/harp-updater-gui"
Documentation = "https://github.com/AllenNeuralDynamics/harp-updater-gui#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harp_updater_gui"]

[tool.hatch.build.targets.wheel.force-include]
"src/harp_updater_gui/static" = "harp_updater_gui/static"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.1",
    "sphinx>9.0.0",
    "furo>=2025.7.19",
    "myst-parser>=5.0.0",
    "sphinx-jinja>=2.0.2",
    "pyinstaller>=6.19.0",
    "pillow>=11.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
